--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -1,1 +1,22 @@
 
+name: First Workflow
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  job1:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Echo Step 1 Complete
+        run: echo "Step 1 Complete!"
+    job2:
+    runs-on: ubuntu-latest
+
+    steps:
+     - name: Cowsays Action
+    uses: azure/actions/cowsay@v1 with:
+                        text: "Ready for prod-ship it!"
