--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -18,7 +18,7 @@ jobs:
 
     steps:
      - name: Cowsays Action
-       uses: azure/actions/cowsay@v1 
+       uses: mscoutermarsh/cowsays-action@master
        with:
                         text: "Ready for prod-ship it!"
                         color: "magenta"
