--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -15,6 +15,8 @@ jobs:
         run: echo "Step 1 Complete!"
   job2:
     runs-on: ubuntu-latest
+    needs: job1
+
 
     steps:
      - name: Cowsays Action
