--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,5 +26,9 @@ jobs:
 
      
 
-      - name: Deploy Bicep template
-        run: az deployment group create --resource-group ${{ secrets.AZURE_RG }} --template-file InfastructureAsCode/main.bicep
+          - name: Deploy ARM template
+          uses: azure/arm-deploy@v1
+          with:
+            subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+            resourceGroupName: ${{ secrets.AZURE_RG }}
+            template: ./InfastructureAsCode/main.bicep
