--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,10 +28,11 @@ jobs:
 
      
 
-      - name: Deploy ARM template
+  # Deploy ARM template
+      - name: Run ARM deploy
         uses: azure/arm-deploy@v1
         with:
-            subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-            resourceGroupName: ${{ secrets.AZURE_RG }}
-            template: ./InfastructureAsCode/main.bicep
-            parameters: environment=${{ env.targetEnv }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          resourceGroupName: ${{ secrets.AZURE_RG }}
+          template: ./InfrastructureAsCode/main.bicep
+          parameters: environment=${{ env.targetEnv }}
