--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Set up Azure CLI
         uses: azure/login@v1
         with:
-          creds: ${{ secrets.AZURE_CRREDENTIALS }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
     
 
       - name: Install Bicep CLI
@@ -24,11 +24,11 @@ jobs:
 
      
 
-  # Deploy ARM template
+   # Deploy ARM template
       - name: Run ARM deploy
         uses: azure/arm-deploy@v1
         with:
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           resourceGroupName: ${{ secrets.AZURE_RG }}
           template: ./InfrastructureAsCode/main.bicep
           parameters: environment=${{ env.targetEnv }}
